DONE: respond function, server responds directly to client TODO: close server socket in client every time a request is responded TODO: independent thread in client to wait for response

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,5 +1,18 @@
+# Object files #
 *.o
 *.so
 *.a
+
+# OS generated files #
 .DS_Store
 Thumbs.db
+
+# Executables #
+zht_ben
+zht_cpptest
+zht_ctest
+zhtproxy
+zhtserver
+cpp_zhtclient_threaded_test
+c_zhtclient_lanl_threaded
+c_zhtclient_threaded_test
