--- a/src/zht_proxy.conf
+++ b/src/zht_proxy.conf
@@ -1,5 +1,5 @@
 #MAX_ZHT 512
-#NUM_REPLICAS 0
+NUM_REPLICAS 3
 #REPLICATION_TYPE 0
 #ZHT_CAPACITY 4
 #FILECLIENT_PATH ./filecient
@@ -10,7 +10,7 @@
 
 #OPTIONS: TCP/UDP/MPI
 PROTOCOL TCP
-PORT 50001
+PORT 60000
 
 #MESSAGE CONF: byte(s)
 MSG_MAXSIZE 1000000
